--- a/school/templates/devoirs/student/project_detail.html
+++ b/school/templates/devoirs/student/project_detail.html
@@ -1,5 +1,9 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-    <h1>Home</h1>
-    <h2>detail-student</h2>
+  <div class="content">
+    <div>
+      <h1>Home</h1>
+      <h2>detail-student</h2>
+    </div>
+  </div>
 {% endblock %}
