--- a/school/templates/devoirs/student/projects_list_student.html
+++ b/school/templates/devoirs/student/projects_list_student.html
@@ -1,5 +1,60 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-    <h1>Home</h1>
-    <h2>list-student</h2>
+  <div class="content">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card ">
+          <div class="card-header">
+            <h4 class="card-title"> Projects Table</h4>
+          </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table tablesorter " id="">
+                <thead class=" text-primary">
+                  <tr>
+                    <th>
+                      Titre
+                    </th>
+                    <th>
+                      Matiere
+                    </th>
+                    <th>
+                     date Cloture
+                    </th>
+                    <th class="text-center">
+                      Status
+                    </th>
+                    <th></th>
+                  </tr>
+                </thead>
+                {% for project in projects %}
+                <tbody>
+                  <tr>
+                    <td>
+                      {{ project.title }}
+                    </td>
+                    <td>
+                      {{ project.matiere }}
+                    </td>
+                    <td>
+                      {{ project.end_at }}
+                    </td>
+                    <td class="text-center">
+                      {{ project.status }}
+                    </td>
+                    <td>
+                      <a href="{% url 'detail-std' project.id %}" class="btn btn-primary btn-link btn-sm"><i class="tim-icons icon-notes"></i></a>
+                      <a href="{% url 'submit'  project.id %}" class="btn btn-primary btn-link btn-sm"><i class="tim-icons icon-pencil"></i></a>
+                      
+                    </td>
+                  </tr>
+                
+                {% endfor %}
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
