--- a/school/templates/includes/navigation.html
+++ b/school/templates/includes/navigation.html
@@ -33,16 +33,19 @@
                         </li> {% endcomment %}
                         
                         <li class="dropdown nav-item">
-                            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                                <div class="photo">
-                                    <img src="{{ ASSETS_ROOT }}/img/anime3.png" alt="Profile Photo">
-                                </div>
-                                <b class="caret d-none d-lg-block d-xl-block"></b>
-                                <p class="d-lg-none">
-                                    Log out
-                                </p>
-                            </a>
-                            <ul class="dropdown-menu dropdown-navbar">
+                           
+                               
+                                {% if user.is_authenticated %}
+                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                                    <div class="photo">
+                                        <img src="{{ ASSETS_ROOT }}/img/anime3.png" alt="Profile Photo">
+                                    </div>
+                                    <b class="caret d-none d-lg-block d-xl-block"></b>
+                                    <p class="d-lg-none">
+                                        Log out
+                                    </p>
+                                </a>
+                                <ul class="dropdown-menu dropdown-navbar">
                                 <li class="nav-link">
                                     <a href="{% url 'profil' %}" class="nav-item dropdown-item">Profile</a>
                                 </li>
@@ -51,6 +54,12 @@
                                     <a href="{% url 'logout' %}" 
                                        class="nav-item dropdown-item">Logout</a>
                                 </li>
+                                {% else %}
+                                <li class="nav-link">
+                                    <a href="{% url 'login' %}" 
+                                       class="nav-item dropdown-item">Login</a>
+                                {% endif %}
+                                
                             </ul>
                         </li>
                         <li class="separator d-lg-none"></li>
