--- a/school/templates/includes/navigation-fullscreen.html
+++ b/school/templates/includes/navigation-fullscreen.html
@@ -9,7 +9,7 @@
                         <span class="navbar-toggler-bar bar3"></span>
                     </button>
                 </div>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href=" {% url 'index' %} ">
                     Home
                 </a>
             </div>
