--- a/school/templates/devoirs/student/projects_list_student.html
+++ b/school/templates/devoirs/student/projects_list_student.html
@@ -44,7 +44,7 @@
                     </td>
                     <td>
                       <a href="{% url 'detail-std' project.id %}" class="btn btn-primary btn-link btn-sm"><i class="tim-icons icon-notes"></i></a>
-                      <a href="{% url 'submit'  project.id %}" class="btn btn-primary btn-link btn-sm"><i class="tim-icons icon-pencil"></i></a>
+                      <a href="#" class="btn btn-primary btn-link btn-sm"><i class="tim-icons icon-pencil"></i></a>
                       
                     </td>
                   </tr>
