--- a/school/templates/layouts/base.html
+++ b/school/templates/layouts/base.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" href="{{ ASSETS_ROOT }}/img/favicon.png" />
 
     <title>
-      Django Dashboard Black -{% block title %}
-      {% endblock %}| AppSeed
+      Django Project -{% block title %}
+      {% endblock %}|Ulrich
     </title>
 
     <!-- Fonts and icons -->
