--- a/school/templates/includes/navigation.html
+++ b/school/templates/includes/navigation.html
@@ -38,7 +38,8 @@
                                 {% if user.is_authenticated %}
                                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                                     <div class="photo">
-                                        <img src="{{ ASSETS_ROOT }}/img/anime3.png" alt="Profile Photo">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        
                                     </div>
                                     <b class="caret d-none d-lg-block d-xl-block"></b>
                                     <p class="d-lg-none">
