--- a/templates/layouts/base-fullscreen.html
+++ b/templates/layouts/base-fullscreen.html
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" href="{{ ASSETS_ROOT }}/img/favicon.png">
 
     <title>
-        Django Dashboard Black - {% block title %}{% endblock %} | AppSeed
+        Django - {% block title %}{% endblock %} 
     </title>
     
     <!--     Fonts and icons     -->
@@ -50,7 +50,7 @@
 
             {% block content %}{% endblock content %}
 
-            {% comment %} {% include 'includes/footer-fullscreen.html' %} {% endcomment %}
+            
 
         </div>
 
