--- a/templates/devoirs/project/view_project.html
+++ b/templates/devoirs/project/view_project.html
@@ -9,19 +9,84 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">
+            
+              {% if msg %}
+                  <span class="text-danger">{{ msg | safe }}</span>
+              {% else %}
+                  <span>
+                     Update Project
+                  </span>
+              {% endif %}  
+          
+          </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form action="">
+        <form action="" method="post" enctype="multipart/form-data">
             <div class="modal-body">
             {% csrf_token %}
-            {{form.as_p}}
+            <div class="card-body px-5 py-3">
+
+              <div class="row">
+                  <div class="col-md-12 px-md-1">
+                      <div class="form-group">
+                          <label>Project Title</label>
+                          {{ form.title }}
+                      </div>
+                      <span class="text-danger">{{ form.title.errors }}</span>
+                  </div>
+
+                  <div class="col-md-12 px-md-1">
+                      <div class="form-group">
+                          <label>Subject</label>
+                          {{ form.subject }}
+                      </div>
+                      <span class="text-danger">{{ form.subject.errors }}</span>
+                  </div>
+
+                  <div class="col-md-12 px-md-1">
+                      <div class="form-group">
+                          <label class="input-group-text" for="inputGroupFile02">File</label>
+                          {{ form.project_file }}
+                      </div>
+                      <span class="text-danger">{{ form.project_file.errors }}</span>
+                  </div>
+
+                  <div class="col-md-12 px-md-1">
+                      <div class="form-group">
+                          <label>Finish time</label>
+                          {{ form.end_at }}
+                          <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                      </div>
+                      <span class="text-danger">{{ form.end_at.errors }}</span>
+                  </div>
+
+                  <div class="col-md-12 px-md-1">
+                      <div class="form-group">
+                          <label>Assigned to </label>
+                          {{ form.assigned_to_eleve }}
+                      </div>
+                      <span class="text-danger">{{ form.assigned_to_eleve.errors }}</span>
+                  </div>
+
+                  <div class="col-md-12 px-md-1">
+                      <div class="form-group">
+                          <label>Matiere</label>
+                          {{ form.matiere }}
+                      </div>
+                      <span class="text-danger">{{ form.matiere.errors }}</span>
+                  </div>
+                  
+              </div>
+
+              
+          </div>
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
         </form> 
       </div>
