--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -12,7 +12,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="navbar-nav ml-auto">
-                        {% if role == "enseignant" or "admin" %}
+                        {% if role == "enseignant" %}
                             <li class="input-group d-flex align-items-center mb-0">
                                 <a href=" {% url 'create'%} " class="btn btn-datk" tabindex="-1" role="button" aria-disabled="true"><i class="fa fa-plus" aria-hidden="true"></i></a>
                             </li>
