--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -17,6 +17,7 @@
                             <h6 class="card-category">
                                 {% if msg %}
                                     <span class="text-danger">{{ msg | safe }}</span>
+                                    <span class="text-danger">{{ msg_mail | safe }}</span>
                                 {% else %}
                                     <span>
                                         Add your credentials
